<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_bg"
    tools:context=".ui.fragments.menu.MenuFragment">


    <LinearLayout
        android:layout_width="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="250dp">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/menu"
            android:textColor="#000"
            android:fontFamily="@font/tthoves_demibold"
            android:textSize="26sp"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_view_menu_play"
            android:layout_width="wrap_content"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/menu_text_state"
            android:fontFamily="@font/tthoves_medium"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_view_menu_profile"
            android:layout_width="wrap_content"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textColor="@color/menu_text_state"
            android:fontFamily="@font/tthoves_medium"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_view_menu_settings"
            android:layout_width="wrap_content"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/menu_text_state"
            android:fontFamily="@font/tthoves_medium"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_view_menu_exit"
            android:layout_width="wrap_content"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/menu_text_state"
            android:fontFamily="@font/tthoves_medium"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>