<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_join_room_title"
        android:text="@string/text_view_join_room_title"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/tthoves_bold"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_join_room_player_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="#909090"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_join_room_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tthoves_regular"
            android:hint="@string/hint_text_view_join_room_player_name"
            android:inputType="text"
            android:textColor="#3d3d3d"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>







    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dialog_join_room_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/tthoves_medium"
        android:text="@string/button_join_room_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="4dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:padding="16dp"
        app:rippleColor="@color/colorAccent"
        >

    </com.google.android.material.button.MaterialButton>

</LinearLayout>